@@ -4,6 +4,7 @@ import be.seeseemelk.mockbukkit.ServerMock;
 import be.seeseemelk.mockbukkit.UnimplementedOperationException;
 import be.seeseemelk.mockbukkit.scheduler.BukkitSchedulerMock;
 import com.google.common.base.Preconditions;
+import com.google.common.collect.ImmutableSet;
 import org.bukkit.command.PluginCommand;
 import org.bukkit.command.PluginCommandUtils;
 import org.bukkit.configuration.file.YamlConfiguration;
@@ -53,6 +54,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Random;
 import java.util.Set;
+import java.util.WeakHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
@@ -73,6 +75,7 @@ public class PluginManagerMock implements PluginManager
 	private File parentTemporaryDirectory;
 	private final List<Permission> permissions = new ArrayList<>();
 	private final Map<Permissible, Set<String>> permissionSubscriptions = new HashMap<>();
+	private final Map<Boolean, Map<Permissible, Boolean>> defaultPermissionSubscriptions = new HashMap<Boolean, Map<Permissible, Boolean>>();
 	private final @NotNull Map<String, List<Listener>> listeners = new HashMap<>();
 
 	private final List<Class<?>> pluginConstructorTypes = Arrays.asList(JavaPluginLoader.class,
@@ -895,28 +898,39 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void subscribeToDefaultPerms(boolean op, @NotNull Permissible permissible)
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Map<Permissible, Boolean> map = this.defaultPermissionSubscriptions.computeIfAbsent(op, k -> new WeakHashMap<>());
+		map.put(permissible, true);
 	}
 
 	@Override
 	public void unsubscribeFromDefaultPerms(boolean op, @NotNull Permissible permissible)
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Map<Permissible, Boolean> map = this.defaultPermissionSubscriptions.get(op);
+
+		if (map == null)
+		{
+			return;
+		}
+
+		map.remove(permissible);
+		if (map.isEmpty())
+		{
+			this.defaultPermissionSubscriptions.remove(op);
+		}
 	}
 
 	@Override
 	public @NotNull Set<Permissible> getDefaultPermSubscriptions(boolean op)
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Map<Permissible, Boolean> map = this.defaultPermissionSubscriptions.get(op);
+
+		return map == null ? ImmutableSet.of() : ImmutableSet.copyOf(map.keySet());
 	}
 
 	@Override
 	public @NotNull Set<Permission> getPermissions()
 	{
-		return Collections.unmodifiableSet(new HashSet<>(permissions));
+		return Set.copyOf(permissions);
 	}
 
 	/**
